k8s/holiday-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: holidays-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: holidays-service
  template:
    metadata:
      labels:
        app: holidays-service
    spec:
      containers:
        - name: holidays-service
          image: sheethalshobi/project-holidays-service:latest
          ports:
            - containerPort: 5002
