k8s/holiday-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: holiday-db
spec:
  serviceName: "holiday-db"
  replicas: 1
  selector:
    matchLabels:
      app: holiday-db
  template:
    metadata:
      labels:
        app: holiday-db
    spec:
      containers:
        - name: mongo
          image: mongo:6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data-holiday-db
