k8s/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: holiday-db
spec:
  selector:
    app: holiday-db
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
