k8s/holiday-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: holidays-service
spec:
  selector:
    app: holidays-service
  type: ClusterIP
  ports:
    - port: 5002
      targetPort: 5002
